--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,8 +30,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
+  kua_dependency_first:
+    git:
+      url:  https://github.com/kanal-altyapi/kua-dependency-first.git
+      ref: master
+  kua_dependency_second:
+    git:
+      url: https://github.com/kanal-altyapi/kua-dependency-second.git
+      ref: master
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
